k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movies-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movies-api
  template:
    metadata:
      labels:
        app: movies-api
    spec:
      containers:
        - name: movies-api
          image: amonclus/movies-api:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
